--- a/src/Components/CommonComponents/LogInButton/loginButton.css
+++ b/src/Components/CommonComponents/LogInButton/loginButton.css
@@ -5,4 +5,7 @@
     border-radius: 20px;
     padding: 10px 20px;
     cursor: pointer;
+    font-size: 25px;
+    width: 200px;
+    margin: 20px;
 }
