--- a/src/Components/Views/Home/Home.css
+++ b/src/Components/Views/Home/Home.css
@@ -1,46 +1,71 @@
 @import url('https://fonts.googleapis.com/css?family=League+Spartan');
 
 html, body {
-    font-family: 'League Spartan', sans-serif;
+    font-family: "League+Spartan";
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
 html {
-    background: linear-gradient(to bottom, #FFFFFF, #FAE1E3);
+    /* background: linear-gradient(to bottom, #FFFFFF, #FAE1E3); */
+
+    /* background: linear-gradient(to top, #FAE1E3, #FFFFFF); */
+
+    background: linear-gradient(to top, #FAE1E3 20%, #FFFFFF 30%);
 }
 
 body {
     height: 100%;
+    margin: 20px;
 }
 
-.main {
+.headerHome {
+   text-align: right;
+   margin: 20px;
+   
+}
+
+.mainHome {
   display: Flex;
+  margin: 20px;
+}
+
+.welcomeMessage{
+    width: 50%;
 }
 
 h1 {
-    font-size: 25px;
+    font-size: 70px;
+    font-weight: bold;
 }
 
 .logo {
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 p {
-    font-size: 16px;
+    font-size: 36px;
 }
 
-.seeallPuzzles {
+.ContainerLogo{
+align-content: center;
+width: 50%;
+}
+
+.seeallPuzzlesButton {
     background-color: #131212;
     color: white;
     border: none;
     border-radius: 20px;
     padding: 10px 20px;
     cursor: pointer;
+    font-size: 32px;
+    font-weight: bold;
+    width: 340px;
 }
 
-.seeallPuzzles:hover {
-    background-color: #000;
+h4 {
+    text-align: center;
 }
