carmenlunap change signup and login pages

--- a/src/Components/Views/signUp/signUp.css
+++ b/src/Components/Views/signUp/signUp.css
@@ -61,6 +61,17 @@ body {
   height: 50px;
 }
 
+.signUpButtonBlack {
+  background-color: #131212;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 25px;
+  width: 200px;
+  margin: 20px;
+}
 
 .rightSignup {
   width: 50%;
