--- a/src/Components/Views/home/home.css
+++ b/src/Components/Views/home/home.css
@@ -76,16 +76,32 @@ h4 {
         margin: 10px;
     }
 
+    .headerHome {
+        text-align: right;
+        margin: 10px 10px 10px 20px;
+    }
+
     .mainHome {
         flex-direction: column;
     }
 
     .ContainerLogo {
         width: 100%;
+        margin-left: 0px;
+        padding: 0%;
+        text-align:left;
+        
+    }
+
+    .logo{
+        margin-left: 5%;
     }
 
     .welcomeMessage {
         width: 100%;
+        margin:2px;
+        align-items: center;
+        
     }
 
     h1 {
@@ -99,5 +115,6 @@ h4 {
     .seeallPuzzlesButton {
         font-size: 24px;
         width: 100%;
+       
     }
 }
