--- a/src/Components/Views/signUp/signUp.css
+++ b/src/Components/Views/signUp/signUp.css
@@ -8,33 +8,36 @@ body {
 }
 
 #root {
-    background: linear-gradient(to top, #fae1e3 20%, #ffffff 30%);
-    min-height: 100vh;
+  background: linear-gradient(to top, #fae1e3 20%, #ffffff 30%);
+  min-height: 100vh;
 }
 
 .topDiv {
   display: flex;
   margin: 0px;
   padding: 0px;
- 
 }
 
 .imagelogo {
-    width: 50px;
-    height: 50px;
-  }
+  width: 50px;
+  height: 50px;
+}
 
 .left {
-    width: 50%;
-  }
+  width: 50%;
+  position: relative; /* Añade posicionamiento relativo */
+  z-index: 1;
+}
 
-  .left {
-    width: 50%;
-  }
+.left {
+  width: 50%;
+}
 
 .signUpHeader {
   width: 50%;
   margin: 20px;
+  position: relative; /* Añade posicionamiento relativo */
+  z-index: 1;
 }
 
 .mainSignup {
@@ -78,9 +81,95 @@ body {
 }
 
 .imagenSignup {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+/* Media query para dispositivos como iPhone XR (aproximadamente) */
+@media screen and (max-width: 414px) {
+  .topDiv {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0px;
   }
 
+  h1 {
+    margin-left: 20px;
+  }
 
-  
+  .left,
+  .signUpHeader,
+  .rightSignup {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .imagelogo {
+    margin: 20px;
+  }
+
+  .mainSignup {
+    text-align: left;
+  }
+
+  .fullNameInput,
+  .ZipCodeInput,
+  .emailInput,
+  .phoneInput,
+  .passwordInput {
+    width: 70%;
+    margin: 10px 0;
+  }
+
+  .signUpButtonBlack {
+    width: 120%;
+    margin: 17px 0;
+  }
+}
+
+.imagenSignup {
+  width: 100%;
+  height: 100%;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  z-index: 0;
+  opacity: 0.4;
+}
+
+
+/* Media query para pantallas más anchas, como la vista horizontal */
+@media screen and (min-width: 415px) {
+  .topDiv {
+    flex-direction: row; 
+  }
+
+  .left, .rightSignup {
+    width: 50%;
+  }
+
+  h1 {
+    margin: 5px 0px 10px 20px;
+  }
+  .left {
+    position: relative;
+    z-index: 1;
+  }
+
+  .rightSignup {
+    position: relative;
+    z-index: 1;
+  }
+
+  .imagenSignup {
+    position: absolute;
+    top: 0;
+    right: 0; 
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.9;
+  }
+}
