natalia392 style: adjust elements in navigation bar

--- a/src/Components/commonComponents/navigationBar/navigationBar.css
+++ b/src/Components/commonComponents/navigationBar/navigationBar.css
@@ -7,9 +7,21 @@
   cursor: pointer;
 }
 
+.nav-list {
+  display: flex;
+  align-items: center;
+}
+
 .nav-list ul {
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   font-weight: bolder;
+  align-content: center;
+}
+
+.nav-list li {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
