--- a/src/Components/commonComponents/logo/logo.css
+++ b/src/Components/commonComponents/logo/logo.css
@@ -2,12 +2,7 @@
   margin-left: 40px;
   width: 87%;
   height: 87%;
+  cursor: pointer;
 }
 
-.mainLogo {
-  width: 10%;
-  height: 10%;
-  margin: 20px;
-  position: relative; 
-  z-index: 1;
-}
+
