--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -1,3 +1,28 @@
 /* .headerProfile {
     display: flex;
 } */
+.requests {
+    border-top: 0.5px solid #D95043;
+    padding-top: 10px;
+}
+
+.profile-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background: #1C4259;
+    font-size: 25px;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+    width: 200px;
+    margin: 20px;
+    gap: 0.625rem;
+}
+
+.icons {
+    height: 40px;
+    width: 40px;
+}
