--- a/src/Components/Views/addNewPuzzle/addNewPuzzle.css
+++ b/src/Components/Views/addNewPuzzle/addNewPuzzle.css
@@ -7,20 +7,21 @@
 }
 
 /* Estilo para el contenedor principal */
-.content-container {
+.container-new-puzzle {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
-    min-height: 100vh;
+    justify-content: space-between;
 }
 
-/* Estilos para las columnas izquierda y derecha */
 .left-side,
 .right-side {
     flex: 1;
     width: 200px;
-    padding: 30px;
+}
+
+.left-side {
+    justify-content: center;
 }
 
 /* Versión de escritorio */
@@ -31,11 +32,11 @@
 }
 
 /* Estilo de la imagen */
-img {
+.image {
     position: relative;
     width: 300px;
     height: 300px;
-    margin-top: 30px;
+    margin-top: 10px;
     border-radius: 10px;
 }
 
@@ -74,7 +75,24 @@ textarea {
     outline: none;
 }
 
-label {
+/* Estilo para el placeholder */
+input::placeholder,
+textarea::placeholder {
+    font-family: 'League Spartan', sans-serif;
+    color: #8f8686;
+}
+
+/* Efecto de foco */
+input:focus,
+textarea:focus {
+    box-shadow: 0 0 10px #e7a6ab;
+}
+
+.text-area {
+    height: 140px;
+}
+
+.subtitles {
     font-size: 20px;
     font-weight: bold;
     text-align: left;
@@ -89,26 +107,9 @@ label {
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilo para el placeholder */
-input::placeholder,
-textarea::placeholder {
-    font-family: 'League Spartan', sans-serif;
-    color: #8f8686;
-}
-
-/* Efecto de foco */
-input:focus,
-textarea:focus {
-    box-shadow: 0 0 10px #e7a6ab;
-}
-
-h2 {
+.title {
     font-size: 35px;
     padding-bottom: 10px;
-}
-
-textarea {
-    height: 140px;
 }
 
 /* Estilos botones*/
@@ -162,55 +163,25 @@ textarea {
     flex-direction: column;
 }
 
-.upload-image label,
-.right-side button {
-    margin-top: 10px;
-    max-width: 300px;
-}
-
-footer {
+.foo-ter {
     color: #8f8686;
-    padding: 50px;
+    padding: 30px;
+    margin-top: auto;
+    width: 100%;
+    text-align: center;
 }
 
-/* Media querys */
-@media (max-width: 768px) {
-
-    .left-side,
-    .right-side {
-        flex: 1 0 100%;
-        min-width: 100%;
-    }
-}
-
-@media (max-width: 768px) {
-
-    .left-side,
-    .right-side {
-        align-items: stretch;
-    }
-}
-
+/* Media query para dispositivos pequeños */
 @media (max-width: 768px) {
     .content-container {
         flex-direction: column;
+        /* Cambio a fila para dispositivos pequeños */
     }
 
     .left-side,
     .right-side {
-        flex: 1 0 100%;
-        min-width: 100%;
-    }
-
-    .left-side,
-    .right-side {
-        align-items: stretch;
-    }
-}
-
-@media (max-width: 768px) {
-    .content-container {
-        flex-direction: column;
+        width: 100%;
+        /* Ocupan toda la anchura en dispositivos pequeños */
     }
 }
 
