--- a/src/Components/Views/home/home.css
+++ b/src/Components/Views/home/home.css
@@ -21,7 +21,7 @@ body {
 
 .headerHome {
     text-align: right;
-    margin: 20px 100px 20px 20px;
+    padding: 20px 130px 20px 20px;
 }
 
 .mainHome {
