--- a/src/Components/Views/updateProfile/updateProfile.css
+++ b/src/Components/Views/updateProfile/updateProfile.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=League+Spartan');
+@import '/src/index.css';
 
 * {
     margin: 0;
@@ -7,12 +8,12 @@
 }
 
 /* Estilo para el contenedor principal */
-.content-container {
+.update-profile-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
-    height: 100%;
+    height: 100vh;
 }
 
 /* Estilos para las columnas izquierda y derecha */
@@ -110,9 +111,8 @@ h2 {
     color: white
 }
 
-
 .add-puzzle-button {
-    background-color: #5BB5D9;
+    background-color: var(--light-blue);
 }
 
 .form-container {
@@ -134,6 +134,7 @@ h2 {
     margin-top: 10px;
     max-width: 300px;
 }
+
 
 
 /* Media querys */
