--- a/src/Components/Views/updateProfile/updateProfile.css
+++ b/src/Components/Views/updateProfile/updateProfile.css
@@ -1,204 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=League+Spartan');
-@import '/src/index.css';
-
-* {
-    margin: 0;
-    font-family: "League Spartan", sans-serif;
-    box-sizing: border-box;
-}
-
-/* Estilo para el contenedor principal */
-.update-profile-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
-    height: 100vh;
-}
-
-/* Estilos para las columnas izquierda y derecha */
-.left-side,
-.right-side {
-    flex: 1;
-    width: 200px;
-    padding: 30px;
-}
-
-.right-side {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-
-/* Versión de escritorio */
-@media (min-width: 768px) {
-    .left-side {
-        margin-left: 15%;
-    }
-}
-
-/* Estilos para inputs y textareas */
-input,
-textarea {
+.input-update {
     width: 70%;
-    border-radius: 20px;
-    font-size: 25px;
-    color: #131212;
-    background: linear-gradient(to bottom, #f5ecec);
-    text-align: center;
-    box-shadow: 1px 1px 7px #59343E inset;
-    margin: 10px 0;
-    padding: 15px;
-    border: none;
-    resize: none;
-    font-family: 'League Spartan', sans-serif;
-    outline: none;
-}
-
-label {
-    font-size: 20px;
-    font-weight: bold;
-    text-align: left;
-    padding-top: 10px;
-}
-
-/* Ajustes para los botones */
-.return-dashboard-button,
-.add-puzzle-button {
-    border: none;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
-}
-
-/* Estilo para el placeholder */
-input::placeholder,
-textarea::placeholder {
-    font-family: 'League Spartan', sans-serif;
-    color: #8f8686;
-}
-
-/* Efecto de foco */
-input:focus,
-textarea:focus {
-    box-shadow: 0 0 10px #e7a6ab;
-}
-
-h2 {
-    font-size: 35px;
-    padding-bottom: 30px;
-}
-
-/* Estilos botones*/
-.return-dashboard-button,
-.add-puzzle-button {
-    background-color: white;
-    color: #131212;
-    border-radius: 20px;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 25px;
-    width: 300px;
-    margin: 20px 0;
-}
-
-.return-dashboard-button {
-    border: 2px solid #131212;
-}
-
-.add-puzzle-button:hover,
-.return-dashboard-button:hover {
-    background-color: #1C4259;
-    color: white
-}
-
-.add-puzzle-button {
-    background-color: var(--light-blue);
-}
-
-.form-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-/* Estilo para los contenedores de formularios */
-.form-container,
-.upload-image,
-.right-side {
-    display: flex;
-    flex-direction: column;
-}
-
-.upload-image label,
-.right-side button {
-    margin-top: 10px;
-    max-width: 300px;
-}
-
-
-
-/* Media querys */
-@media (max-width: 768px) {
-
-    .left-side,
-    .right-side {
-        flex: 1 0 100%;
-        min-width: 100%;
-    }
-}
-
-@media (max-width: 768px) {
-
-    .left-side,
-    .right-side {
-        align-items: stretch;
-    }
-}
-
-@media (max-width: 768px) {
-    .content-container {
-        flex-direction: column;
-    }
-
-    .left-side,
-    .right-side {
-        flex: 1 0 100%;
-        min-width: 100%;
-    }
-
-    .left-side,
-    .right-side {
-        align-items: stretch;
-    }
-}
-
-@media (max-width: 768px) {
-    .content-container {
-        flex-direction: column;
-    }
-}
-
-/* Estilos de la barra de desplazamiento */
-::webkit-scrollbar {
-    width: 12px;
-}
-
-::-webkit-scrollbar {
-    width: 12px;
-}
-
-/* El fondo*/
-::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
-    border-radius: 10px;
-}
-
-/* La barra deslizante */
-::-webkit-scrollbar-thumb {
-    background-color: #afaaaa;
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #a19090;
 }
