--- a/src/Components/Views/index/index.css
+++ b/src/Components/Views/index/index.css
@@ -1,65 +1,125 @@
 .headerIndex {
-    display: flex;
+  display: flex;
 }
 
 .containerImageLogo {
-    width: 50%;
+  width: 50%;
 }
 
 .containerButtons {
-   text-align: right; 
-   width: 50%;
+  text-align: right;
+  width: 50%;
 }
 
-.all{
-    margin: 20px;
+.all {
+  margin: 20px;
 }
 
 h2 {
-    font-size: 48px;
-    font-weight: bold;
+  font-size: 48px;
+  font-weight: bold;
 }
 
 .searchZipCodeInput {
-    padding-right: 40px; 
-    border-radius: 20px;
-    height: 30px;
-    margin-right: 10px;
-    }
+  padding-right: 40px;
+  border-radius: 20px;
+  height: 30px;
+  margin-right: 10px;
+}
 .fa-search {
-    cursor: pointer;
+  cursor: pointer;
+}
 
+.search-button {
+  background-color: #131212;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 10px;
+  cursor: pointer;
+  font-size: 22px;
+  font-weight: bold;
+  width: 180px;
+  margin: 20px;
 }
 
 .containerInfPuzzle {
-background-color: #FFF2EA;
-align-items: center;
-text-align: center;
-width: 300px;
-padding: 10px;
-height: 300px;
-margin: 15px;
+  background-color: #fff2ea;
+  align-items: center;
+  text-align: center;
+  width: 300px;
+  padding: 10px;
+  height: 300px;
+  margin: 15px;
 }
 
 .puzzle {
-    width: 60%;
-    margin: 5px;
-    
+  width: 60%;
+  margin: 5px;
 }
 
-.showMoreButton{
-    background-color: #131212;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 10px 10px;
-    cursor: pointer;
-    font-size: 22px;
-    font-weight: bold;
-    width: 180px;  
+.showMoreButton {
+  background-color: #131212;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 10px;
+  cursor: pointer;
+  font-size: 22px;
+  font-weight: bold;
+  width: 180px;
 }
 
- 
-  .showMoreindex {
-    text-align: center;
+.showMoreindex {
+  text-align: center;
+}
+
+/*piece icon*/
+
+.container-piece-icon {
+  animation: spin 20s linear infinite;
+  display: inline-block;
+  transform-style: preserve-3d;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateY(0deg) rotateX(0deg);
   }
+  100% {
+    transform: rotateY(360deg) rotateX(360deg);
+  }
+}
+
+.piece-icon {
+  width: 300px;
+  height: 300px;
+}
+
+/* show more*/
+.containerInfPuzzle {
+  max-height: 400px; /* Establece la altura máxima inicial */
+  overflow: hidden; /* Oculta los elementos que excedan la altura máxima */
+}
+
+.containerImagePuzzles {
+  display: inline-block;
+  width: 50%; /* Para que se muestren dos elementos por línea */
+  /* Otros estilos para cada imagen, como margen, espaciado, etc. */
+}
+
+/* Estilo del botón "Show More" */
+.showMoreButton {
+  background-color: #131212;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+/* Estilo adicional para los elementos ocultos */
+.containerInfPuzzle.hidden {
+  max-height: none; /* Restablece la altura máxima para mostrar todos los elementos */
+}
