--- a/src/Components/commonComponents/logo/logo.css
+++ b/src/Components/commonComponents/logo/logo.css
@@ -1,13 +1,20 @@
-.mainLogo {
+.main-Logo {
   margin-left: 40px;
-  width: 87%;
-  height: 87%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
-.mainLogo {
+.image-logo {
+    width: 70px;
+    height:70px;
+}
+
+/* .mainLogo {
   width: 10%;
   height: 10%;
   margin: 20px;
   position: relative; 
   z-index: 1;
-}
+} */
