--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -1,6 +1,30 @@
 /* .headerProfile {
     display: flex;
 } */
+
+.profile-section {
+    display: flex;
+    justify-content: center;
+}
+
+.user-data-div {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.user-data-text, p {
+    font-size:larger;
+}
+
+.user-info {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    gap: 1rem;
+}
+
 .requests {
     border-top: 0.5px solid #D95043;
     padding-top: 10px;
@@ -18,11 +42,31 @@
     padding: 10px 20px;
     cursor: pointer;
     width: 200px;
-    margin: 20px;
+    height: 50px;
+    margin: 10px;
     gap: 0.625rem;
+    transition: background-color 0.3s ease-in-out;
 }
 
-.icons {
-    height: 40px;
-    width: 40px;
+.profile-btn:hover {
+    background-color: #5BB5D9;
+    color: black;
+    font-weight: bold;
+}
+
+.icons-profile {
+    height: 50px;
+    width: 50px;
+}
+
+.icon-person {
+    height: 130px;
+    width: 130px;
+}
+
+.profile-actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
