--- a/src/Components/commonComponents/logoutButton/logoutButton.css
+++ b/src/Components/commonComponents/logoutButton/logoutButton.css
@@ -10,4 +10,11 @@
     width: 150px;
     height: 60px;
     margin: 20px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.logout-button:hover {
+    background-color: #D95043;
+    border: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
