--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -62,11 +62,13 @@
     margin: 10px;
     gap: 0.625rem;
     transition: background-color 0.3s ease-in-out;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .search-puzzles-btn:hover {
     background-color: #F2955E;
     font-weight: 700;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .profile-btn {
@@ -92,6 +94,7 @@
     background-color: #5BB5D9;
     color: black;
     font-weight: 700;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .icons-profile {
