--- a/src/Components/commonComponents/navigationBar/navigationBar.css
+++ b/src/Components/commonComponents/navigationBar/navigationBar.css
@@ -28,4 +28,9 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.nav-list li:hover {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
