--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -1,6 +1,7 @@
 /* .headerProfile {
     display: flex;
 } */
+/* -------------------- PROFILE SECTION STYLE ----------------- */
 .main-profile {
     display: flex;
     flex-direction: column;
@@ -40,11 +41,7 @@
     gap: 1rem;
 }
 
-.requests {
-    border-top: 0.5px solid #D95043;
-    padding-top: 10px;
-}
-
+/* ---------------------------BUTTON STYLES ------------------------------*/
 .search-puzzles-btn {
     display: flex;
     justify-content: center;
@@ -112,4 +109,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+/* ---------------------- REQUEST SECTION STYLES -------------------------*/
+.requests {
+    border-top: 0.5px solid #D95043;
+    padding-top: 10px;
 }
