--- a/src/Components/Views/login/login.css
+++ b/src/Components/Views/login/login.css
@@ -1,70 +1,141 @@
+
+@import url('https://fonts.googleapis.com/css?family=League+Spartan');
+
 html,
 body {
-  font-family: "League Spartan", sans-serif;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    font-family: "League+Spartan";
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-#root {
-    background: linear-gradient(to top, #fae1e3 20%, #ffffff 30%);
-
+html {
+    background: linear-gradient(to top, #FAE1E3 20%, #FFFFFF 30%);
 }
 
-header {
-  text-align: left;
-  margin: 20px;
+body {
+    height: 100%;
+    margin: 20px;
 }
 
-.imagelogo {
-  width: 70px;
-  height: 70px;
-}
+.headerHome {
+    text-align: right;
+    padding: 20px 130px 20px 20px;
 
-.topDiv {
-    display: flex;
-    margin: 0px;
-    padding: 0px;
   }
 
-.mainLogin {
+.mainHome {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
-    align-items: center;
+    margin: 20px;
 }
 
-.leftLogin {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  
-    align-items: center;
-    width: 100%;
+
+
+.welcomeMessage {
+    width: 50%;
+    margin-left: 70px;
 }
+
+h1 {
+    font-size: 70px;
+    font-weight: bold;
+}
+
+.logo {
+    margin-left: 40px;
+    width: 87%;
+    height: 87%;
+}
+
+p {
+    font-size: 36px;
+}
+
+.ContainerLogo {
+    align-content: center;
+    width: 50%;
+} 
 
 .rightLogin {
-    width: 50%;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
 
-.emailInputLogin, .passwordInputLogin   {
-  width: 200px;
-  border-radius: 20px;
-  font-size: 25px;
-  color: #131212;
-  background: linear-gradient(to bottom, #FFFFFF, #FAE1E3);
-  text-align: center;
-  box-shadow: 1px 1px 7px #59343E inset;
-  margin: 10px;
-  width: 300px;
-  height: 50px;
 }
-
 
 .imagenlogin {
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 0;
 }
 
+.seeallPuzzlesButton {
+    background-color: #131212;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 32px;
+    font-weight: bold;
+    width: 340px;
+    position: relative;
+    z-index: 1;
+}
 
+h4 {
+    text-align: center;
+}
+
+/* Media query para dispositivos Samsung iPhone XR (aproximadamente) */
+
+@media screen and (max-width: 414px) {
+    body {
+        margin: 10px;
+    }
+
+    .headerHome {
+        text-align: right;
+        margin: 10px 10px 10px 20px;
+    }
+
+    .mainHome {
+        flex-direction: column;
+    }
+
+    .ContainerLogo {
+        width: 100%;
+        margin-left: 0px;
+        padding: 0%;
+        text-align: left;
+
+    }
+
+    .logo {
+        margin-left: 5%;
+    }
+
+    .welcomeMessage {
+        width: 100%;
+        margin: 2px;
+        align-items: center;
+
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 24px;
+    }
+
+    .seeallPuzzlesButton {
+        font-size: 24px;
+        width: 100%;
+    }
+}
