--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@
   --beige: #F2CA99;
   --light-beige: #FFF2EA;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
