--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     width: 80%;
+    margin-bottom: 60px;
+    padding-left: 25%;
 }
 
 .profile-btn-section {
@@ -31,7 +33,7 @@
     gap: 1rem;
 }
 
-.user-data-text, p {
+.user-data-text p {
     font-size:larger;
 }
 
@@ -102,6 +104,11 @@
 .withdraw-request-btn:hover {
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
 }
+
+.add-puzzle-btn {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit;
+}
 /* ------------------- ICONS STYLES -------------------------------------*/
 .icons-profile {
     height: 50px;
@@ -118,25 +125,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.close-request-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    background: #F2955E;
-    font-size: 25px;
-    font-weight: 700;
-    border: none;
-    border-radius: 20px;
-    padding: 10px 20px;
-    cursor: pointer;
-    width: 200px;
-    height: 50px;
-    margin: 10px;
-    gap: 0.625rem;
-    transition: background-color 0.3s ease-in-out;
 }
 
 /* ---------------------- REQUEST SECTION STYLES -------------------------*/
