--- a/src/Components/commonComponents/logInButton/loginButton.css
+++ b/src/Components/commonComponents/logInButton/loginButton.css
@@ -3,9 +3,24 @@
     color: white;
     border: none;
     border-radius: 20px;
-    padding: 10px 20px;
     cursor: pointer;
-    font-size: 25px;
-    width: 200px;
-    margin: 20px;
+    font-size: 20px;
+    width: 190px;
+    height: 45px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+}
+
+.login-button:hover {
+    background-color: var(--salmon);
+    border: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.1);
+    color: black
+}
+
+/* Effect when the button is clicked */
+.login-button:active {
+    transform: translateY(2px);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12);
 }
