--- a/src/Components/commonComponents/logo/logo.css
+++ b/src/Components/commonComponents/logo/logo.css
@@ -7,12 +7,8 @@
 }
 
 .image-logo {
-    width: 70px;
-    height:70px;
+  width: 70px;
+  height: 70px;
   cursor: pointer;
+  z-index: 1;
 }
-
-
-
-
-
