--- a/src/Components/commonComponents/signUpButton/signUpButton.css
+++ b/src/Components/commonComponents/signUpButton/signUpButton.css
@@ -1,11 +1,27 @@
+@import '/src/index.css';
+
 .signup-button {
-    background-color:white;
+    background-color: white;
     color: #131212;
     border: 2px solid #131212;
     border-radius: 20px;
-    padding: 10px 20px;
     cursor: pointer;
-    font-size: 25px;
-    width: 200px;
-    margin: 20px;
+    font-size: 20px;
+    width: 190px;
+    height: 45px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+}
+
+.signup-button:hover {
+    background-color: var(--salmon);
+    border: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+/* Effect when the button is clicked */
+.signup-button:active {
+    transform: translateY(2px);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12);
 }
