--- a/src/Components/Views/puzzleShowPage/puzzleShowPage.css
+++ b/src/Components/Views/puzzleShowPage/puzzleShowPage.css
@@ -1,15 +1,40 @@
-/* .all {
+
+
+.all-image-Borrow-Puzzle {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    margin: 50px;
+}
+
+.left-image-Borrow-Puzzle{
+    display: flex;
+   flex-direction: column;
+   width: 50%;
+   margin-left: 20px;
+}
+
+.title-image-Borrow-Puzzle{
     margin-top: 30px;
 }
 
-.rightPuzzleShowPage{
-    margin-top: 150px;
-    width: 50%;
+.puzzle--image-Borrow-Puzzle{
+    width: 600px;
 }
 
-.leftPuzzleShowPage{
+
+.right-Puzzle-Show-Page{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
     width: 50%;
-}
- */
+    padding-right: 70px;
+  }
+
+  .message-Puzzle-Show-Page{
+    width: 550px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #D9737B;
+    margin: 10px 0px 30px 0px ;
+  }
