--- a/src/Components/commonComponents/headerLogout/headerLogout.css
+++ b/src/Components/commonComponents/headerLogout/headerLogout.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    margin-top: 20px;
 }
 
 
@@ -12,5 +13,9 @@
     justify-content: flex-end;
     align-items: center;
     margin-right: 140px;
+}
+
+.header-login-buttons-logout{
+    margin-left: 25px; 
 }
 
