--- a/src/Components/commonComponents/logoutButton/logoutButton.css
+++ b/src/Components/commonComponents/logoutButton/logoutButton.css
@@ -14,7 +14,7 @@
 }
 
 .logout-button:hover {
-    background-color: #D95043;
+    background-color: var(--salmon);
     border: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
