--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -109,7 +109,8 @@
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-.add-puzzle-btn {
+.add-puzzle-btn,
+.search-puzzles {
     text-decoration: none; /* Elimina el subrayado */
     color: inherit;
 }
