natalia392 feat & style: add routing to update profile button, and adjust css

--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -110,7 +110,8 @@
 }
 
 .add-puzzle-btn,
-.search-puzzles {
+.search-puzzles,
+.update-profile-btn {
     text-decoration: none; /* Elimina el subrayado */
     color: inherit;
 }
