--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -5,8 +5,8 @@
 .main-profile {
     display: flex;
     flex-direction: column;
-    width: 80%;
-    padding-left: 20%;
+    width: 90%;
+    padding-left: 10%;
 }
 
 .user-name-profile {
@@ -123,6 +123,9 @@
     align-items: center;
 }
 
+.accept-deny-btn {
+    width: auto;
+}
 /* ------------------- ICONS STYLES -------------------------------------*/
 .icons-profile {
     height: 50px;
@@ -156,6 +159,12 @@
 .puzzle-info-container {
     display: flex;
     gap: 15px;
+}
+
+.request-info-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* ---------------------------- IMG STYLES ------------------------------*/
