--- a/src/Components/Views/dashboard/dashboard.css
+++ b/src/Components/Views/dashboard/dashboard.css
@@ -1,6 +1,3 @@
-/* .headerProfile {
-    display: flex;
-} */
 /* -------------------- PROFILE SECTION STYLES ----------------- */
 .main-profile {
     display: flex;
@@ -37,7 +34,7 @@
 }
 
 .user-data-text p {
-    font-size:larger;
+    font-size: larger;
 }
 
 .user-info {
@@ -48,7 +45,7 @@
 }
 
 /* ---------------------------BUTTON STYLES ------------------------------*/
-/* Estilos comunes para botones */
+/* common styles for buttons */
 .btn {
     display: flex;
     justify-content: center;
@@ -59,15 +56,15 @@
     border-radius: 20px;
     padding: 10px 20px;
     cursor: pointer;
-    width: 160px; /* Ancho común para botones */
-    height: 40px; /* Altura común para botones */
+    width: 160px;
+    height: 40px;
     margin: 10px;
     gap: 0.625rem;
     transition: background-color 0.3s ease-in-out;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-/* Estilos para botones específicos */
+/* specific button styles */
 .search-puzzles-btn {
     background-color: #5BB5D9;
     width: 250px;
@@ -95,7 +92,7 @@
 }
 
 .close-request-btn:hover {
-    background-color:#5BB5D9;
+    background-color: #5BB5D9;
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -112,7 +109,7 @@
 .add-puzzle-btn,
 .search-puzzles,
 .update-profile-btn {
-    text-decoration: none; /* Elimina el subrayado */
+    text-decoration: none;
     color: inherit;
 }
 
@@ -126,6 +123,7 @@
 .accept-deny-btn {
     width: auto;
 }
+
 /* ------------------- ICONS STYLES -------------------------------------*/
 .icons-profile {
     height: 50px;
@@ -172,4 +170,36 @@
     height: 150px;
     width: auto;
     padding: 20px;
+}
+
+/* Media query for iPhone XR vertical mode */
+@media only screen and (max-width: 414px) and (max-height: 896px) {
+
+    /* iPhone XR vertical mode styles */
+    .main-profile {
+        width: 100%;
+        padding-left: 0;
+    }
+    .user-name-profile {
+        font-size: 24px;
+    }
+    .btn-div {
+        margin-left: 0;
+    }
+}
+
+/* Media query for iPhone XR horizontal mode */
+@media only screen and (max-width: 896px) and (max-height: 414px) {
+
+    /* Horizontal iPhone XR styles */
+    .main-profile {
+        width: 90%;
+        padding-left: 10%;
+    }
+    .user-name-profile {
+        font-size: 30px;
+    }
+    .btn-div {
+        margin-left: 60%;
+    }
 }
