--- a/src/Components/Views/home/home.css
+++ b/src/Components/Views/home/home.css
@@ -9,11 +9,6 @@
     box-sizing: border-box;
 }
 
-#root {
-    background: linear-gradient(to top, #fae1e3 20%, #ffffff 30%);
-    min-height: 100vh;
-}
-
 .title-home {
     font-size: 50px;
     line-height: 1;
@@ -39,18 +34,30 @@
     flex-wrap: wrap;
 }
 
+.app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: linear-gradient(to top, #fae1e3 20%, #ffffff 30%);
+    z-index: 1;
+}
+
 .main-home {
+    flex: 1;
+    /* Esto hace que main-home ocupe todo el espacio disponible, empujando el footer hacia abajo */
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     padding: 20px 100px;
 }
 
+
 .left-side-home {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 10px;
+
 }
 
 .right-side-home {
@@ -96,6 +103,7 @@
     align-items: center;
     padding: 20px 0;
     font-size: 13px;
+    color: #8f8686;
 }
 
 /* Media Queries para Responsive Design */
