--- a/src/Components/Views/login/login.css
+++ b/src/Components/Views/login/login.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-position: right center;
     background-size: 50% 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .main-login {
@@ -11,6 +11,15 @@
     grid-template-columns: 1fr 1fr;
     gap: 100px;
     padding: 80px 50px 0px 50px;
+}
+
+.title-login {
+    padding-top: 10px;
+    font-size: 30px;
+    padding-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    font-weight: bolder;
+    text-align: center;
 }
 
 /* Media Queries */
